--- a/PartyPlaylists/PartyPlaylists.iOS/Info.plist
+++ b/PartyPlaylists/PartyPlaylists.iOS/Info.plist
@@ -34,5 +34,20 @@
 	<string>PartyPlaylists</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>spotify</string>
+	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.spotify.iOS-SDK-Quick-Start</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>spotify-ios-quick-start</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
